--- a/style.css
+++ b/style.css
@@ -18,12 +18,6 @@ header {
     margin: 0 auto;
 }
 
-@media screen and (max-width: 768px) {
-    .container {
-        padding: 0 8px;
-    }
-}
-
 .nav-container > .row {
     padding: 15px 0;
 }
@@ -51,21 +45,6 @@ header {
 
 .button:active {
     background-color: #57AD568a;
-}
-
-@media screen and (max-width: 575px) {
-    header .end-xs {
-        padding-right: 8px;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .footer-container-4 .col-xs-12:not(:last-of-type) {
-        margin-bottom: 24px;
-}
-    .footer-container-4 .footer-menu {
-        padding-left: 8px;
-    }
 }
 
 .basket {
@@ -297,32 +276,6 @@ h1 {
     box-sizing: border-box;
 }
 
-@media screen and (max-width: 575px) {
-    .banner-card {
-        display: grid;
-        text-align: center;
-    }
-
-    .banner-card {
-        margin: 0 8px;
-        padding: 24px 48px;
-    }
-
-    .banner-time {
-        margin: 0 auto;
-    }
-
-    h1 {
-        font-size: 24px;
-        margin-bottom: 40px;
-        line-height: 28px;
-    }
-
-    .banner .food-name {
-        margin-bottom: 16px;
-    }
-}
-
 .menu {
     list-style: none;
     display: flex;
@@ -332,24 +285,6 @@ h1 {
 
 .category-underline {
     display: none;
-}
-
-@media screen and (max-width: 768px) {
-    .menu {
-        display: none;
-    }
-
-    .selected-category {
-        text-align: center;
-    }
-
-    .category-underline {
-        display: inline-block;
-        width: 50px;
-        border-top: 1px solid black;
-        padding: 0;
-        margin: 0;
-    }
 }
 
 .menu li{
@@ -385,11 +320,17 @@ h1 {
     font-weight: 400;
 }
 
-.dish h3 {
+.dish-list {
+    list-style: none;
+    padding: 16px 0 0 16px;
+    margin: 0;
+}
+
+.dish-header {
     font-size: 16px;
     line-height: 24px;
     font-weight: 400;
-    display: inline-block;
+    
     margin: 0 0 4px 0;
     white-space: nowrap;
     overflow: hidden;
@@ -399,26 +340,14 @@ h1 {
 .price {
     font-size: 15px;
     line-height: 21px;
-    display: inline-block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding-top: 83px;
 }
 
-@media screen and (max-width: 576px) {
-    .dish h3 {
-        font-size: 14px;
-    }
-
-    .dish img {
-        max-height: 100%;
-    }
-
-    .dish {
-        min-width: 308px;
-        height: 102px;
-    }
-
-    .price {
-        padding-top: 16px;
-    }
+.dish:first-of-type .price {
+    padding-top: 62px;
 }
 
 .addition {
@@ -460,4 +389,125 @@ h1 {
 
 .dishes {
     padding-bottom: 30px;
+}
+
+@media screen and (max-width: 768px) {
+    .menu {
+        display: none;
+    }
+
+    .category-underline {
+        display: inline-block;
+        width: 50px;
+        border-top: 1px solid black;
+        padding: 0;
+        margin: 0;
+    }
+
+    .container {
+        padding: 0 8px;
+    }
+
+    .selected-category {
+        text-align: center;
+        padding-top: 110px !important;
+        padding-bottom: 32px;
+    }
+
+    .footer-container-4 .col-xs-12:not(:last-of-type) {
+        margin-bottom: 24px;
+    }
+    .footer-container-4 {
+        padding: 40px 8px;
+    }
+
+    .footer-container-2 {
+        padding: 30px 8px 40px 8px;
+    }
+    
+    .footer-container-3 {
+        padding: 24px;
+    }
+
+    .footer-container-3 img {
+        max-width: 125px;
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+    }
+
+    .appstore {
+        margin-right: 24px !important;
+    }
+
+
+}
+
+@media screen and (max-width: 575px) {
+    .banner-card {
+        display: grid;
+        text-align: center;
+        position: relative;
+        left: 0;
+        top: 140px;
+        box-shadow: 0px 5px 5px 0px rgba(175, 175, 175, 0.22);
+    }
+
+    .banner-card {
+        margin: 0 8px;
+        padding: 24px 48px;
+    }
+
+    .banner-time {
+        margin: 0 auto;
+    }
+
+    h1 {
+        font-size: 24px;
+        margin-bottom: 40px;
+        line-height: 28px;
+    }
+
+    .banner .food-name {
+        margin-bottom: 16px;
+    }
+
+    .dish-header {
+        font-size: 14px;
+    }
+
+    .dish img {
+        max-height: 100%;
+    }
+
+    .dish {
+        min-width: 308px;
+        height: 102px;
+        border: 0;
+        border-bottom: 1px solid #d8d8d8;
+        border-radius: 0;
+    }
+
+    .dish-list {
+        padding: 0;
+    }
+
+    .dishes {
+        padding: 0 8px;;
+    }
+
+    .dish .price {
+        padding-top: 37px;
+    }
+
+    .dish:first-of-type .price {
+        padding-top: 16px;
+    }
+
+    header .end-xs {
+        padding-right: 8px;
+    }
+
+    .button {
+        margin-right: 8px;
+    }
 }
